cluster/manifests/embedding-gateway/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: embedding-gateway
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: embedding-gateway
  mtls:
    mode: STRICT
