cluster/manifests/embedding-gateway/overlays/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: embedding-gateway-backend
  annotations:
    argocd.argoproj.io/sync-wave: "-3" # varnish - 1
spec:
  trafficDistribution: PreferClose
  selector:
    app.kubernetes.io/name: embedding-gateway
    app.kubernetes.io/component: ""
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
