cluster/manifests/embedding-gateway/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: embedding-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - embedding-gateway.minikube.127.0.0.1.nip.io
        - embedding-gateway.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
    - hosts:
        - api.openai.com
      port:
        number: 443
        name: tls
        protocol: TLS
      tls:
        mode: PASSTHROUGH
