cluster/manifests/embedding-gateway/overlays/dev/sidecar.yaml
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: embedding-gateway
spec:
  workloadSelector:
    labels:
      app.kubernetes.io/name: embedding-gateway
  outboundTrafficPolicy:
    mode: REGISTRY_ONLY
  egress:
    - captureMode: DEFAULT
      hosts:
        - ./*
        - istio-system/istiod.istio-system.svc.cluster.local
        - otel/otel-agent.otel.svc.cluster.local
