cluster/manifests/embedding-gateway/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: embedding-gateway
spec:
  gateways:
    - embedding-gateway
  hosts:
    - embedding-gateway.minikube.127.0.0.1.nip.io
  http:
    - route:
        - destination:
            host: embedding-gateway
            port:
              number: 8080
